# Task-manage-api-Agile-DevOps-

./: .gitignore  README.md  SPRINT0.md  SPRINT1_REVIEW.md  SPRINT2_REVIEW.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  logger.py  main.py  models.py  tasks.py
tests/: __init__.py  test_create.py  test_delete.py  test_get.py  test_health.py  test_update.py
