[project]
name = "task-management-api"
version = "0.1.0"
description = ""
authors = [
    { name = "RUYANGA", email = "ruyangam15@gmail.com" }
]
requires-python = ">=3.12"

dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.49.0,<0.50.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "app" }]

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]